crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaI2cBus PamojaI2cBus;
typedef struct PamojaI2cPart PamojaI2cPart;
typedef struct PamojaI2cScript PamojaI2cScript;
PamojaI2cPart *pamoja_i2c_part_new(uint8_t address);
PamojaI2cPart *pamoja_i2c_word_part_new(uint8_t address);
PamojaI2cPart *pamoja_i2c_command_part_new(uint8_t address, uintptr_t width);
uint8_t pamoja_i2c_part_kind(const PamojaI2cPart *part);
PamojaStatus pamoja_i2c_part_load(PamojaI2cPart *part,
                                  uint8_t first,
                                  const uint8_t *bytes,
                                  uintptr_t len);
uint8_t pamoja_i2c_part_register(const PamojaI2cPart *part, uint8_t register_);
PamojaStatus pamoja_i2c_part_read(const PamojaI2cPart *part,
                                  uint8_t first,
                                  uint8_t *out,
                                  uintptr_t len);
PamojaStatus pamoja_i2c_part_set_word(PamojaI2cPart *part, uint8_t register_, uint16_t value);
PamojaStatus pamoja_i2c_part_read_only(PamojaI2cPart *part, uint8_t register_, uint16_t mask);
uint16_t pamoja_i2c_part_word(const PamojaI2cPart *part, uint8_t register_);
PamojaStatus pamoja_i2c_part_answer(PamojaI2cPart *part,
                                    const uint8_t *command,
                                    uintptr_t command_len,
                                    const uint8_t *reply,
                                    uintptr_t reply_len);
uintptr_t pamoja_i2c_part_received_count(const PamojaI2cPart *part);
PamojaBuffer *pamoja_i2c_part_received(const PamojaI2cPart *part, uintptr_t index);
uint8_t pamoja_i2c_part_address(const PamojaI2cPart *part);
uintptr_t pamoja_i2c_part_transfers(const PamojaI2cPart *part);
void pamoja_i2c_part_free(PamojaI2cPart *part);
PamojaI2cScript *pamoja_i2c_script_new(void);
PamojaStatus pamoja_i2c_script_write(PamojaI2cScript *script,
                                     uint8_t address,
                                     const uint8_t *bytes,
                                     uintptr_t len);
PamojaStatus pamoja_i2c_script_read(PamojaI2cScript *script,
                                    uint8_t address,
                                    const uint8_t *reply,
                                    uintptr_t len);
PamojaStatus pamoja_i2c_script_write_read(PamojaI2cScript *script,
                                          uint8_t address,
                                          const uint8_t *bytes,
                                          uintptr_t len,
                                          const uint8_t *reply,
                                          uintptr_t reply_len);
PamojaStatus pamoja_i2c_script_fault(PamojaI2cScript *script, uint8_t address, uint8_t fault);
uintptr_t pamoja_i2c_script_len(const PamojaI2cScript *script);
void pamoja_i2c_script_free(PamojaI2cScript *script);
PamojaStatus pamoja_i2c_bus_open(const char *path, PamojaI2cBus **out_bus);
PamojaI2cBus *pamoja_i2c_bus_simulated(void);
PamojaStatus pamoja_i2c_bus_attach(const PamojaI2cBus *bus, const PamojaI2cPart *part);
PamojaI2cBus *pamoja_i2c_bus_scripted(const PamojaI2cScript *script);
uint8_t pamoja_i2c_bus_kind(const PamojaI2cBus *bus);
PamojaStatus pamoja_i2c_bus_write(const PamojaI2cBus *bus,
                                  uint8_t address,
                                  const uint8_t *bytes,
                                  uintptr_t len);
PamojaStatus pamoja_i2c_bus_read(const PamojaI2cBus *bus,
                                 uint8_t address,
                                 uint8_t *out,
                                 uintptr_t len);
PamojaStatus pamoja_i2c_bus_write_read(const PamojaI2cBus *bus,
                                       uint8_t address,
                                       const uint8_t *bytes,
                                       uintptr_t len,
                                       uint8_t *out,
                                       uintptr_t out_len);
uintptr_t pamoja_i2c_bus_transfers(const PamojaI2cBus *bus);
bool pamoja_i2c_bus_remaining(const PamojaI2cBus *bus, uintptr_t *out_remaining);
uint64_t pamoja_i2c_bus_waited_micros(const PamojaI2cBus *bus);
PamojaI2cPart *pamoja_i2c_bus_part(const PamojaI2cBus *bus, uint8_t address);
void pamoja_i2c_bus_free(PamojaI2cBus *bus);